fruit-ingress.yaml
#fruit-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fruit-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
        - path: /durian
          backend:
            serviceName: durian-service
            servicePort: 5678
        - path: /papaya
          backend:
            serviceName: papaya-service
            servicePort: 5678
